# audamo

./: README.md  audamo.py  audamo.service  audamo.timer  auto-dark-mode.service  auto-dark-mode.timer  auto_dark_mode.py  config.toml  example-custom-script.sh  install.sh  pyproject.toml  requirements.txt  uninstall.sh
docs/: Gemfile  _config.yml  index.md
docs/_posts/: 2024-03-04-welcome-to-jekyll.markdown
docs/assets/css/: style.scss
